--- a/exercicio.html
+++ b/exercicio.html
@@ -7,7 +7,38 @@
     <title>Card Pokemon</title>
     <link rel="stylesheet" href="static/css/style.css">
 </head>
-<body>        
+<body>
+    <div class="boxCarta">
+        <div class="boxInterna">
+            <div class="titleDiv">
+                <h1 class="name">Nome do Personagem</h1>
+                <p class="custoMana">Mana</p>
+            </div>
+
+            <div class="divImgPersonagem">
+                <img src="static/img/serraangel.png" class="imgPersonagem">
+            </div>
+
+            <div class="linhaTipo">
+                <h3 class="typeline">Creature - Sei lá</h3>
+                <p class="expansionSymbol">*</p>
+            </div>
+            <div class="textBox">
+                <h4 class="habilidades"> Flying, vigilance</h4>
+                <p class="caracteristicas">Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Facere, magnam atque.
+                    Omnis pariatur vel sapiente corrupti! Adipisci nobis
+                    maiores molestiae ducimus voluptatum repellendus,
+                    dolorem hic rem architecto at quisquam id.</p>
+            </div>
+            <div class="poder">
+                <h5 class="numPoder">4/4</h5>
+            </div>
+        </div>
+        <p class="numColecionador">036/269 U</p>
+        <p class="autor">DOM * EN & Dorato Giancola</p>
+        <p class="copyright"> tm $ @ 2018 Wizards of the Coast</p>
+    </div>
     <script src="static/js/main.js"></script>
 </body>
 </html>
